--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="about.html">About</a>
+            <a class="nav-link " href="about.html">Sobre</a>
           </li>
 
           <li class="nav-item">
