--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EstateAgency Bootstrap Template - Index</title>
+  <title>Apartamento Leblon</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,7 +40,11 @@
   <!-- ======= Header/Navbar ======= -->
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
     <div class="container">
-
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -75,7 +79,7 @@
 
     <div class="swiper-wrapper">
 
-      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-1.jpg)">
+      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(https://a0.muscache.com/im/pictures/miso/Hosting-735709672448310951/original/28b3b5b2-6349-468c-ae0d-70df2fc52fe2.jpeg?im_w=1200)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -83,7 +87,7 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Apartment Leblon
+                    <p class="intro-title-top">Apartamento Leblon
                     </p>
                     <h1 class="intro-title mb-4 ">
                       <span class="color-b">95 </span> m²
@@ -97,7 +101,7 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-2.jpg)">
+      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(https://a0.muscache.com/im/pictures/miso/Hosting-735709672448310951/original/9bb6d6a2-37be-42e7-bb19-5b6115792010.jpeg?im_w=1200)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -105,10 +109,10 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Apartment Leblon
+                    <p class="intro-title-top">Apartamento Leblon
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">3 </span> Quartos
+                      <span class="color-b">2 </span> Quartos
                     </h1>
 
                   </div>
@@ -118,7 +122,7 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-3.jpg)">
+      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/praia_leme.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -126,11 +130,11 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Apartment Leblon
+                    <p class="intro-title-top">Apartamento Leblon
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">Vista </span> Praia
-                      <br> do arpoador
+                      <span class="color-b">200 </span> metros
+                      <br> da praia do leme
                     </h1>
 
                   </div>
@@ -146,7 +150,7 @@
 
   <main id="main">
 
-    <!-- ======= Agents Section ======= -->
+    <!-- ======= Pontos Turísticos ======= -->
     <section class="section-agents section-t8">
       <div class="container">
         <div class="row">
@@ -154,6 +158,7 @@
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
                 <h2 class="title-a">Pontos Turísticos</h2>
+                <h3 style = "font-size: 18px;">Veja pontos turísticos próximos ao apartamento</h3>
               </div>
               <div class="title-link">
                 <a href="agents-grid.html">Veja Mais
@@ -167,7 +172,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="https://a.cdn-hotels.com/gdcs/production58/d706/1b81278c-2e15-4928-9596-110501c14bba.jpg" alt="" class="img-d img-fluid">
+                <img src="assets/img/Bondinho.jpg"   alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -192,19 +197,19 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="https://cdn.limber.net.br/img/bilhetes/3073/3073-CFwXwozTS6.jpeg" alt="" class="img-d img-fluid">
+                <img src="assets/img/Cristo.jpeg" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="agent-single.html" class="link-two">Cristo Redentor
+                      <a href="agent-single.html" class="link-two">Cristo Redentor</a>
                     </h3>
                   </div>
                 </div>
                 <div class="card-body-d">
                   <p class="content-d color-text-a">
-                    Uma das 7 maravilhas do mundo moderno
+                    Passeio ao bondinho do pão de açucar
                   </p>
                   <div class="info-agents color-a">
 
@@ -214,23 +219,19 @@
                   <div class="socials-footer d-flex justify-content-center">
                     <ul class="list-inline">
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
-                          <i class="bi bi-facebook" aria-hidden="true"></i>
+                        <a class="link-one">
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
-                          <i class="bi bi-twitter" aria-hidden="true"></i>
+                        <a  class="link-one">
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
-                          <i class="bi bi-instagram" aria-hidden="true"></i>
+                        <a  class="link-one">
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
-                          <i class="bi bi-linkedin" aria-hidden="true"></i>
+                        <a>   
                         </a>
                       </li>
                     </ul>
@@ -242,7 +243,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Arpoador_by_Diego_Baravelli-08345.jpg" alt="" class="img-d img-fluid">
+                <img src="assets/img/Arpoador.jpg" alt="" class="img-d img-fluid">
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -269,96 +270,129 @@
       </div>
     </section><!-- End Agents Section -->
 
-  <!-- ======= Footer ======= -->
-  <section class="section-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-4">
-          <div class="widget-a">
-            <div class="w-header-a">
-              <h3 class="w-title-a text-brand">EstateAgency</h3>
-            </div>
-            <div class="w-body-a">
-              <p class="w-text-a color-text-a">
-                Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat duis
-                sed aute irure.
-              </p>
-            </div>
-            <div class="w-footer-a">
-              <ul class="list-unstyled">
-                <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com
-                </li>
-                <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
-          <div class="widget-a">
-            <div class="w-header-a">
-              <h3 class="w-title-a text-brand">The Company</h3>
-            </div>
-            <div class="w-body-a">
-              <div class="w-body-a">
-                <ul class="list-unstyled">
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Site Map</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Legal</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Agent Admin</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Careers</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Affiliate</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="bi bi-chevron-right"></i> <a href="#">Privacy Policy</a>
-                  </li>
-                </ul>
+    <!-- ======= Restaurantes ======= -->
+    <section class="section-agents section-t8">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="title-wrap d-flex justify-content-between">
+              <div class="title-box">
+                <h2 class="title-a">Restaurantes/Bares</h2>
+                <h3 style = "font-size: 18px;">Veja restaurantes e bares próximos ao apartamento</h3>
+              </div>
+              <div class="title-link">
+                <a href="agents-grid.html">Veja Mais
+                  <span class="bi bi-chevron-right"></span>
+                </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
-          <div class="widget-a">
-            <div class="w-header-a">
-              <h3 class="w-title-a text-brand">International sites</h3>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card-box-d">
+              <div class="card-img-d">
+                <img src="assets/img/Damici.jpg"   alt="" class="img-d img-fluid">
+              </div>
+              <div class="card-overlay card-overlay-hover">
+                <div class="card-header-d">
+                  <div class="card-title-d align-self-center">
+                    <h3 class="title-d">
+                      <a href="agent-single.html" class="link-two">D'Amici
+                        <br> Restaurante </a>
+                    </h3>
+                  </div>
+                </div>
+                <div class="card-body-d">
+                  <p class="content-d color-text-a">
+                    Pratos com influência do norte da Itália
+                  </p>
+                  <div class="info-agents color-a">
+                  </div>
+                </div>
+
+              </div>
             </div>
-            <div class="w-body-a">
-              <ul class="list-unstyled">
-                <li class="item-list-a">
-                  <i class="bi bi-chevron-right"></i> <a href="#">Venezuela</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="bi bi-chevron-right"></i> <a href="#">China</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="bi bi-chevron-right"></i> <a href="#">Hong Kong</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="bi bi-chevron-right"></i> <a href="#">Argentina</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="bi bi-chevron-right"></i> <a href="#">Singapore</a>
-                </li>
-                <li class="item-list-a">
-                  <i class="bi bi-chevron-right"></i> <a href="#">Philippines</a>
-                </li>
-              </ul>
+          </div>
+          <div class="col-md-4">
+            <div class="card-box-d">
+              <div class="card-img-d">
+                <img src="assets/img/martinez.jpg" alt="" class="img-d img-fluid">
+              </div>
+              <div class="card-overlay card-overlay-hover">
+                <div class="card-header-d">
+                  <div class="card-title-d align-self-center">
+                    <h3 class="title-d">
+                      <a href="agent-single.html" class="link-two">Restaurante Martínez> </a>
+                    </h3>
+                  </div>
+                </div>
+                <div class="card-body-d">
+                  <p class="content-d color-text-a">
+                    Ótimo restaurante a beira-mar
+                  </p>
+                  <div class="info-agents color-a">
+
+                  </div>
+                </div>
+                <div class="card-footer-d">
+                  <div class="socials-footer d-flex justify-content-center">
+                    <ul class="list-inline">
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card-box-d">
+              <div class="card-img-d">
+                <img src="assets/img/sayuri.jpg" alt="" class="img-d img-fluid">
+              </div>
+              <div class="card-overlay card-overlay-hover">
+                <div class="card-header-d">
+                  <div class="card-title-d align-self-center">
+                    <h3 class="title-d">
+                      <a href="agent-single.html" class="link-two">Sayuri
+                        <br> restaurante japonês</a>
+                    </h3>
+                  </div>
+                </div>
+                <div class="card-body-d">
+                  <p class="content-d color-text-a">
+                    restaurante de comida oriental
+                  </p>
+                  <div class="info-agents color-a">
+
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section><!-- End Agents Section -->
+
+
+  <!-- ======= Footer ======= -->
+
   <footer>
     <div class="container">
       <div class="row">
@@ -369,16 +403,16 @@
                 <a href="#">Home</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="#">Fotos</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Property</a>
+                <a href="#">Vídeos</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Blog</a>
+                <a href="#">Contatos</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="#">Formulário</a>
               </li>
             </ul>
           </nav>
@@ -386,39 +420,22 @@
             <ul class="list-inline">
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="bi bi-facebook" aria-hidden="true"></i>
+                  <i class="bi bi-envelope" style="color:rgb(20, 0, 109)"  aria-hidden="true"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="bi bi-twitter" aria-hidden="true"></i>
+                  <i class="bi bi-whatsapp" style="color:rgb(4, 187, 4)" aria-hidden="true"></i>
                 </a>
               </li>
               <li class="list-inline-item">
                 <a href="#">
-                  <i class="bi bi-instagram" aria-hidden="true"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="bi bi-linkedin" aria-hidden="true"></i>
+                  <i class="bi bi-instagram" style="color:rgb(167, 47, 161)" aria-hidden="true"></i>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="copyright-footer">
-            <p class="copyright color-text-a">
-              &copy; Copyright
-              <span class="color-a">EstateAgency</span> All Rights Reserved.
-            </p>
-          </div>
           <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=EstateAgency
-          -->
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
         </div>
