--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
   <!-- ======= Footer ======= -->
 
-  <footer>
+  <footer style = "margin-top: 25px;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
