--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Apartamento Leblon</title>
+  <title>Apartamento Leme</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: EstateAgency - v4.10.0
-  * Template URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -87,10 +81,10 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Apartamento Leblon
+                    <p class="intro-title-top">Apartamento Leme
                     </p>
                     <h1 class="intro-title mb-4 ">
-                      <span class="color-b">95 </span> m²
+                      <span class="color-b">85 </span> m²
                       <br> Área útil
                     </h1>
 
@@ -109,7 +103,7 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Apartamento Leblon
+                    <p class="intro-title-top">Apartamento Leme
                     </p>
                     <h1 class="intro-title mb-4">
                       <span class="color-b">2 </span> Quartos
@@ -130,7 +124,7 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Apartamento Leblon
+                    <p class="intro-title-top">Apartamento Leme
                     </p>
                     <h1 class="intro-title mb-4">
                       <span class="color-b">200 </span> metros
@@ -158,7 +152,7 @@
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
                 <h2 class="title-a">Pontos Turísticos</h2>
-                <h3 style = "font-size: 18px;">Veja pontos turísticos próximos ao apartamento</h3>
+                <h3 style = "font-size: 18px;">Veja os pontos turísticos próximos ao apartamento</h3>
               </div>
               <div class="title-link">
                 <a href="agents-grid.html">Veja Mais
@@ -185,7 +179,7 @@
                 </div>
                 <div class="card-body-d">
                   <p class="content-d color-text-a">
-                    Passeio ao bondinho do pão de açucar
+                    Passeio ao bondinho do pão de açucar.
                   </p>
                   <div class="info-agents color-a">
                   </div>
@@ -209,7 +203,7 @@
                 </div>
                 <div class="card-body-d">
                   <p class="content-d color-text-a">
-                    Passeio ao bondinho do pão de açucar
+                    Uma das sete maravilhas do mundo moderno
                   </p>
                   <div class="info-agents color-a">
 
@@ -277,8 +271,8 @@
           <div class="col-md-12">
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
-                <h2 class="title-a">Restaurantes/Bares</h2>
-                <h3 style = "font-size: 18px;">Veja restaurantes e bares próximos ao apartamento</h3>
+                <h2 class="title-a">Bares e Restaurantes</h2>
+                <h3 style = "font-size: 18px;">Veja os bares e restaurantes próximos ao apartamento</h3>
               </div>
               <div class="title-link">
                 <a href="agents-grid.html">Veja Mais
@@ -298,7 +292,7 @@
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="agent-single.html" class="link-two">D'Amici
+                      <a href="Bares&Restaurantes.html" class="link-two">D'Amici
                         <br> Restaurante </a>
                     </h3>
                   </div>
@@ -323,13 +317,13 @@
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="agent-single.html" class="link-two">Restaurante Martínez> </a>
+                      <a href="agent-single.html" class="link-two">Restaurante Martínez </a>
                     </h3>
                   </div>
                 </div>
                 <div class="card-body-d">
                   <p class="content-d color-text-a">
-                    Ótimo restaurante a beira-mar
+                    Restaurante a beira-mar do Rio de Janeiro
                   </p>
                   <div class="info-agents color-a">
 
@@ -376,7 +370,7 @@
                 </div>
                 <div class="card-body-d">
                   <p class="content-d color-text-a">
-                    restaurante de comida oriental
+                    Restaurante de comida oriental
                   </p>
                   <div class="info-agents color-a">
 
