--- a/Bares&Restaurantes.html
+++ b/Bares&Restaurantes.html
@@ -137,47 +137,31 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">D'Amici Restaurante</h1>
-              <span class="color-text-a">Comida com forte inflência do norte da Itália</span>
+              <h1 class="title-single">Restaurante Joaquina</h1>
+              <span class="color-text-a">Gastronomia brasileira com petiscos artesanais e pratos típicos</span>
             </div>
           </div>
-          <div class="col-md-12 col-lg-4">
-            <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="#">Home</a>
-                </li>
-                <li class="breadcrumb-item">
-                  <a href="#">Agents</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                  Margaret Stone
-                </li>
-              </ol>
-            </nav>
-          </div>
+          
         </div>
       </div>
     </section><!-- End Intro Single -->
 
     <!-- ======= Agent Single ======= -->
-    <section id = damici2 class="agent-single">
+    <section id = joaquina class="agent-single">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="row">
               <div class="col-md-6">
                 <div class="agent-avatar-box">
-                  <img src="https://www.guiadasemana.com.br/contentFiles/system/pictures/2012/3/44036/original/d-amici-01.jpg" alt="" class="agent-avatar img-fluid">
+                  <img src="https://media-cdn.tripadvisor.com/media/photo-m/1280/1c/7d/e8/73/picanha-com-feijao-tropeiro.jpg" alt="" class="agent-avatar img-fluid">
                 </div>
               </div>
               <div class="col-md-5 section-md-t3">
                 <div class="agent-info-box">
                   <div class="agent-content mb-3">
                     <p class="content-d color-text-a">
-                      Sed porttitor lectus nibh. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
-                      Vivamus suscipit tortor
-                      eget felis porttitor volutpat. Vivamus suscipit tortor eget felis porttitor volutpat.
+                      Inaugurado em 2007, na Cobal do Humaitá, o Joaquina valoriza os sabores da gastronomia brasileira com ingredientes artesanais e pratos tradicionais.
                     </p>
                     <div class="info-agents color-a">
                       <p>
