--- a/Bares&Restaurantes.html
+++ b/Bares&Restaurantes.html
@@ -132,7 +132,7 @@
           </div>
           
     <!-- ======= Intro Single ======= -->
-    <section class="intro-single">
+    <section id = joaquina class="intro-single">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-lg-8">
@@ -147,7 +147,7 @@
     </section><!-- End Intro Single -->
 
     <!-- ======= Agent Single ======= -->
-    <section id = joaquina class="agent-single">
+    <section  class="agent-single">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
