--- a/turismo.html
+++ b/turismo.html
@@ -61,11 +61,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="turismo.html">Turismo</a>
+            <a class="nav-link active" href="turismo.html">Turismo</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="Bares&Restaurantes.html">Gastronomia</a>
+            <a class="nav-link " href="Bares&Restaurantes.html">Gastronomia</a>
           </li>
         </ul>
       </div>
@@ -186,7 +186,30 @@
                       </p>
                     </div>
                   </div>
-                 
+                  <div class="socials-footer">
+                    <ul class="list-inline">
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                          <i class="bi bi-facebook" aria-hidden="true"></i>
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                          <i class="bi bi-twitter" aria-hidden="true"></i>
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                          <i class="bi bi-instagram" aria-hidden="true"></i>
+                        </a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="link-one">
+                          <i class="bi bi-linkedin" aria-hidden="true"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
