--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
 
   <!-- ======= Header/Navbar ======= -->
   <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
-    <div class="container">
-      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container" >
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation" >
         <span></span>
         <span></span>
         <span></span>
       </button>
 
-      <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
+      <div class="navbar-collapse collapse justify-content-center" id="navbarDefault" >
         <ul class="navbar-nav">
 
           <li class="nav-item">
@@ -48,19 +47,19 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="about.html">Fotos</a>
+            <a class="nav-link " href="fotos.html">Fotos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="property-grid.html">Vídeos</a>
+            <a class="nav-link " href="video.html">Vídeos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="contact.html">Contatos</a>
+            <a class="nav-link " href="turismo.html">Turismo</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="blog-grid.html">Formulário</a>
+            <a class="nav-link " href="Bares&Restaurantes.html">Gastronomia</a>
           </li>
         </ul>
       </div>
@@ -393,14 +392,15 @@
         <div class="col-md-12">
           <nav class="nav-footer">
             <ul class="list-inline">
+
               <li class="list-inline-item">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Fotos</a>
+                <a href="fotos.html">Fotos</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Vídeos</a>
+                <a href="video.html">Vídeos</a>
               </li>
               <li class="list-inline-item">
                 <a href="#">Contatos</a>
